[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://spriteFrames/spriteframe3.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Sounds/click.mp3" type="AudioStream" id=3]
[ext_resource path="res://Scripts/modoDalto.gd" type="Script" id=4]
[ext_resource path="res://Themes/default_theme.tres" type="Theme" id=5]
[ext_resource path="res://Videos/gotinha_sincronia.webm" type="VideoStream" id=6]
[ext_resource path="res://Sounds/musicaultraofficial.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/MENUOFFICIAL OFICIAL.wav" type="AudioStream" id=8]
[ext_resource path="res://imgResources/INICIAL.png" type="Texture" id=9]
[ext_resource path="res://Sounds/Musica4loopofficial.wav" type="AudioStream" id=10]
[ext_resource path="res://Shaders/customization.tres" type="Material" id=11]
[ext_resource path="res://Scenes/ControlsMenu.tscn" type="PackedScene" id=12]

[node name="Menu" type="Control"]
margin_right = 640.0
margin_bottom = 360.0
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 1

[node name="cust" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.0
margin_top = -166.0
margin_right = 243.0
margin_bottom = 166.0

[node name="Panel" type="Panel" parent="cust"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="cust/Panel"]
margin_left = 214.0
margin_top = 115.0
margin_right = 275.0
margin_bottom = 194.0
color = Color( 0.121569, 0.137255, 0.396078, 1 )

[node name="ReferenceRect" type="ReferenceRect" parent="cust/Panel/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0.964706, 0.760784, 0.278431, 1 )
border_width = 2.3
editor_only = false

[node name="Sprites" type="AnimatedSprite" parent="cust"]
material = ExtResource( 11 )
position = Vector2( 245, 155 )
scale = Vector2( 2, 2 )
frames = ExtResource( 2 )
animation = "idle"
playing = true

[node name="pickers" type="Control" parent="cust"]
margin_right = 40.0
margin_bottom = 40.0

[node name="colorText" type="RichTextLabel" parent="cust/pickers"]
margin_left = 64.0
margin_top = 122.0
margin_right = 256.0
margin_bottom = 269.0
text = "Cor do Cabelo:
Cor do Corpo:
Cor dos Olhos:"

[node name="bodyPicker" type="ColorPickerButton" parent="cust/pickers"]
margin_left = 178.0
margin_top = 155.0
margin_right = 208.0
margin_bottom = 186.0
rect_min_size = Vector2( 30, 30 )
rect_scale = Vector2( 0.5, 0.5 )
edit_alpha = false

[node name="hairPicker" type="ColorPickerButton" parent="cust/pickers"]
margin_left = 178.0
margin_top = 131.0
margin_right = 208.0
margin_bottom = 162.0
rect_min_size = Vector2( 30, 30 )
rect_scale = Vector2( 0.5, 0.5 )
edit_alpha = false

[node name="eyesPicker" type="ColorPickerButton" parent="cust/pickers"]
margin_left = 178.0
margin_top = 181.0
margin_right = 208.0
margin_bottom = 212.0
rect_min_size = Vector2( 30, 30 )
rect_scale = Vector2( 0.5, 0.5 )
edit_alpha = false

[node name="Button" type="Button" parent="cust"]
margin_left = 41.0
margin_top = 270.0
margin_right = 95.0
margin_bottom = 301.0
text = "Voltar"

[node name="Create" type="Button" parent="cust"]
margin_left = 215.0
margin_top = 224.0
margin_right = 272.0
margin_bottom = 255.0
text = "Create"

[node name="LineEdit" type="LineEdit" parent="cust"]
margin_left = 197.0
margin_top = 72.0
margin_right = 291.0
margin_bottom = 107.0

[node name="bodyButton" type="Button" parent="cust"]
margin_left = 301.0
margin_top = 181.0
margin_right = 329.0
margin_bottom = 212.0
rect_scale = Vector2( 0.5, 0.6 )
text = "<-"

[node name="bodyButton2" type="Button" parent="cust"]
margin_left = 367.0
margin_top = 181.0
margin_right = 395.0
margin_bottom = 212.0
rect_scale = Vector2( 0.5, 0.6 )
text = "->"

[node name="Label" type="Label" parent="cust"]
margin_left = 321.0
margin_top = 177.0
margin_right = 361.0
margin_bottom = 202.0
text = "Corpo"

[node name="Buttons" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.5
margin_top = -39.0
margin_right = 56.5
margin_bottom = 39.0
grow_horizontal = 2
custom_constants/vseparation = 16
__meta__ = {
"_edit_group_": true
}

[node name="Start" type="Button" parent="Buttons"]
margin_right = 100.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 20 )
text = "Start"

[node name="Controls" type="Button" parent="Buttons"]
margin_top = 42.0
margin_right = 100.0
margin_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 20 )
text = "Controles"

[node name="Config" type="Button" parent="Buttons"]
margin_top = 84.0
margin_right = 100.0
margin_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
text = "Configurações"

[node name="Exit" type="Button" parent="Buttons"]
margin_top = 126.0
margin_right = 100.0
margin_bottom = 152.0
text = "Sair"

[node name="configMenu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = -165.0
margin_right = 242.0
margin_bottom = 165.0

[node name="Panel" type="Panel" parent="configMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="configBack" type="Button" parent="configMenu"]
anchor_left = 0.049
anchor_top = 0.945
anchor_right = 0.049
anchor_bottom = 0.946
margin_left = 17.0
margin_top = -32.0
margin_right = 65.0
margin_bottom = -12.0
text = "voltar"

[node name="dislexieCheck" type="CheckBox" parent="configMenu"]
margin_left = 102.0
margin_top = 46.0
margin_right = 264.0
margin_bottom = 91.0
text = "Modo dislexia"

[node name="RichTextLabel" type="RichTextLabel" parent="configMenu"]
margin_left = 107.0
margin_top = 91.0
margin_right = 274.0
margin_bottom = 132.0
text = "Modo daltônico"
scroll_active = false

[node name="modoDalto" type="OptionButton" parent="configMenu"]
margin_left = 226.0
margin_top = 92.0
margin_right = 361.0
margin_bottom = 123.0
script = ExtResource( 4 )

[node name="HSlider" type="HSlider" parent="configMenu"]
margin_left = 228.0
margin_top = 130.0
margin_right = 358.0
margin_bottom = 146.0
max_value = 1.0
step = 0.0
value = 1.0
scrollable = false
tick_count = 20
ticks_on_borders = true

[node name="RichTextLabel2" type="RichTextLabel" parent="configMenu"]
margin_left = 147.0
margin_top = 125.0
margin_right = 317.0
margin_bottom = 155.0
rect_scale = Vector2( 0.8, 0.8 )
text = "Intensidade"
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="configMenu"]
margin_left = 156.0
margin_top = 188.0
margin_right = 224.0
margin_bottom = 286.0
text = "Mestre:
Efeitos:
Música:"
scroll_active = false

[node name="Volume" type="Label" parent="configMenu"]
margin_left = 226.0
margin_top = 167.0
margin_right = 274.0
margin_bottom = 192.0
text = "Volume"

[node name="VideoPlayer" type="VideoPlayer" parent="configMenu"]
visible = false
margin_left = 397.0
margin_top = 150.0
margin_right = 557.0
margin_bottom = 310.0
stream = ExtResource( 6 )
buffering_msec = 100

[node name="Label" type="Label" parent="configMenu/VideoPlayer"]
margin_left = 50.0
margin_top = -27.0
margin_right = 120.0
margin_bottom = 26.0
text = "Vacine-se
"

[node name="VolSliders" type="Control" parent="configMenu"]
margin_right = 40.0
margin_bottom = 40.0

[node name="mestre" type="HSlider" parent="configMenu/VolSliders"]
margin_left = 220.0
margin_top = 196.0
margin_right = 351.0
margin_bottom = 217.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="efeitos" type="HSlider" parent="configMenu/VolSliders"]
margin_left = 220.0
margin_top = 219.0
margin_right = 351.0
margin_bottom = 240.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="musica" type="HSlider" parent="configMenu/VolSliders"]
margin_left = 220.0
margin_top = 245.0
margin_right = 351.0
margin_bottom = 266.0
min_value = -0.05
max_value = 1.0
step = 0.05
value = 1.0

[node name="Timer" type="Timer" parent="configMenu/VolSliders"]
wait_time = 0.05
one_shot = true

[node name="gotinhaButton" type="Button" parent="configMenu"]
visible = false
margin_left = 479.0
margin_top = 319.0
margin_right = 491.0
margin_bottom = 350.0
rect_scale = Vector2( 0.3, 0.3 )
toggle_mode = true

[node name="ControlsMenu" parent="." instance=ExtResource( 12 )]

[node name="clickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Effects"

[node name="MusicaPadrao" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "MENU"

[node name="Musicabrega" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="MusicaLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "MENU"

[connection signal="color_changed" from="cust/pickers/bodyPicker" to="." method="_on_bodyPicker_color_changed"]
[connection signal="pressed" from="cust/pickers/bodyPicker" to="." method="_on_bodyPicker_pressed"]
[connection signal="color_changed" from="cust/pickers/hairPicker" to="." method="_on_hairPicker_color_changed"]
[connection signal="pressed" from="cust/pickers/hairPicker" to="." method="_on_bodyPicker_pressed"]
[connection signal="color_changed" from="cust/pickers/eyesPicker" to="." method="_on_eyesPicker_color_changed"]
[connection signal="pressed" from="cust/pickers/eyesPicker" to="." method="_on_bodyPicker_pressed"]
[connection signal="pressed" from="cust/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="cust/Create" to="." method="_on_Create_pressed"]
[connection signal="text_changed" from="cust/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="cust/bodyButton" to="." method="_on_bodyButton_pressed"]
[connection signal="pressed" from="cust/bodyButton2" to="." method="_on_bodyButton2_pressed"]
[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Buttons/Config" to="." method="_on_Config_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="configMenu/configBack" to="." method="_on_configBack_pressed"]
[connection signal="toggled" from="configMenu/dislexieCheck" to="." method="_on_dislexieCheck_toggled"]
[connection signal="item_selected" from="configMenu/modoDalto" to="." method="_on_modoDalto_item_selected"]
[connection signal="value_changed" from="configMenu/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="finished" from="configMenu/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="value_changed" from="configMenu/VolSliders/mestre" to="." method="_on_mestre_value_changed"]
[connection signal="value_changed" from="configMenu/VolSliders/efeitos" to="." method="_on_efeitos_value_changed"]
[connection signal="value_changed" from="configMenu/VolSliders/musica" to="." method="_on_musica_value_changed"]
[connection signal="toggled" from="configMenu/gotinhaButton" to="." method="_on_gotinhaButton_toggled"]
[connection signal="ExitButton_pressed" from="ControlsMenu" to="." method="_on_ControlsMenu_ExitButton_pressed"]
[connection signal="finished" from="MusicaPadrao" to="." method="_on_MusicaPadrao_finished"]
